--- a/src/components/portada/portada.css
+++ b/src/components/portada/portada.css
@@ -1,5 +1,5 @@
 .portada {
-  background: linear-gradient(300deg,deepskyblue,#d6d6d6);
+  background-color: rgb(144, 132, 132);
   display: flex;
   justify-content: center;
   height: 170px;
